			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2574 2004/03/22 05:03:22 jinmei Exp $

<200403>
2004-03-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: added experimental support for the lifetime
	option based on draft-ietf-dhc-lifetime-00.txt.  dhcp6c now
	restarts information-request/reply exchanges when it has received
	the option and the lifetime expires.

2004-03-19  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/mld6query: to receive an MLD report for any group, 
	it behaves like an IPv6 multicast daemon, instead of joining to ::.
	If cannot, just transmits MLDv1 Queries.

2004-03-17  MOMOSE Tsuyoshi  <momose@az.jp.nec.com>
	* dest6.c: A Binding Error against a packet including an invalid 
	home address is sent only when the packet is not Binding Update.
	This problem was found by the v6pc conformance test tool and fixed 
	with help by Noriko Mizusawa <mizusawa@mitaka.ntt-at.co.jp> in the
	team.

Wed Mar 17 08:47:58 JST 2004  itojun@iijlab.net
	* netbsd: switch to 1.6.2

2004-03-16  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/{ip6_output.c, mldv2.c, in6_msf.c, in_msf.h}:
	IGMPv3/MLDv2 is revived!

2004-03-14  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd4/sys/kern/uipc_syscalls.c (sockargs): allow more than
	MLEN bytes for ancillary data to meet the requirement in Section
	20.1 of RFC3542.  (Still not large enough though, because the new
	upper limit is MCLBYTES).

2004-03-13  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/mld6.c (mld_input): use a local sockaddr_in6
	structure to match multicast addresses in order to handle
	multicast scope correctly.
	In response to a report from Kentarou.Oohara@jp.yokogawa.com.

2004-03-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_output): fixed overkilling about
	the "dst" argument to this function.  The caller side were fixed
	accordingly.  This change also contains a bug fix about incorrect